[package]
authors = ["Terkwood <38859656+Terkwood@users.noreply.github.com>"]
description = "Track inventory for your 12-step program"
edition = "2018"
license = "MIT"
name = "inventory"
version = "0.3.0-b"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.15"
js-sys = "0.3.44"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
wasm-bindgen = "0.2.67"
web-sys = "0.3.44"
yew = "0.17.3"
